src/test/deca/context/invalid/lt_operator_on_boolean.deca
/*
    Description : Test sur la gestion du symbole < sur des booléens

    Résultat : erreur contextuelle (cf regle 3.33)
*/
{
    true < true;
}
// @expected_output deca:7:4: Comparison operation "<" is not supported for types boolean and boolean (3.33)

